tests/neg-custom-args/captures/levels.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/levels.scala:19:33 ---------------------------------------
19 |  val _: Ref[String -> String] = r // error
   |                                 ^
   |                                 Found:    Ref[String -> String]^{r.rd}
   |                                 Required: Ref[String -> String]
   |
   |                                 Note that capability `r.rd` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/levels.scala:23:11 ---------------------------------------
23 |    r.setV(g) // error
   |           ^
   |           Found:    (x: String) ->{cap3} String
   |           Required: String -> String
   |
   |           Note that capability `cap3` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
